--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "cmake.debugConfig": {
         "args": [
-            "${workspaceFolder}/bin/test2.txt",
-            // "${workspaceFolder}/bin/Trab1_Compiladores.txt",
+            // "${workspaceFolder}/bin/test2.txt",
+            "${workspaceFolder}/bin/test.txt",
             "${workspaceFolder}/bin/out.txt",
-            "debug",
+            // "debug",
             // "repl"
         ]
     }
