--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(
-    PascalLexicalAnalyzer
+    PascalSyntaxAnalyzer
     VERSION 0.1.0 
     LANGUAGES C
 )
@@ -9,6 +9,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
 add_subdirectory(src)
 
-add_executable(PascalLexicalAnalyzer main.c)
+add_executable(PascalSyntaxAnalyzer main.c)
 
-target_link_libraries(PascalLexicalAnalyzer PRIVATE PascalLexer PascalToken REPL)
+target_link_libraries(PascalSyntaxAnalyzer PRIVATE PascalLexer PascalToken PascalREPL HashMap PascalAST PascalParser Hash ErrorList)
+
+# if windows
+if(WIN32)
+    target_link_libraries(PascalSyntaxAnalyzer PRIVATE WinFuncs)
+endif()
